Added metrics and minor changes